* 0.85

- Add validation for nodeId
- Defunct http-server.ip and jetty.ip

* 0.84

- Add decayed total to Distribution
- Add NOTICE file to airlift distribution tar file if present in source tree

* 0.83

- Upgrade to Guava 15.0

* 0.82

- [Bug] Launch processes from the data directory

* 0.81

- [Bug] Ignore IOException in Closeables.closeQuietly()
- Always return local announcements from service selectors
- Add merge support to CounterStat and DecayCounter

* 0.80

- [Bug] Fix issue in launcher when inspecting etc and plugin symlinks
- [Bug] Fix JSONP support in jaxrs for generic types (like collections)
- [Bug] Fix logging of configs with multiple independent bindings
- Move the HTML user interface for JMX to /v1/jmx
- Don't try to start JMX agent if already running
- Add 1,5,10, and 25 percentiles to Distribution
- Add manual percentile specification to Distribution getPercentiles
- Add byte array methods for JsonCodec
- Change DataSize toString to round to two decimal places

* 0.79

- Replace custom jmx agent with jdk's
- Defunct jmx.rmiserver.hostname property
- Add additional Logger methods for literal messages
- Update RequestStats to use DistributionStat instead of MeterStat
- Deprecate TimedStat and introduce TimeStat
- Add ConfigurationAwareProvider interface to implement custom
  configuration providers
- Roll and compress the http request log daily
- [Experimental] Add management wrapper for thread pool executor
- New python-based launcher

* 0.78

- Redesign HttpClient exception handling
- Backwards incompatible change to Duration to align with DataSize
- Bind to localhost when using TestingNodeModule
- Validate discovered address in NodeInfo
- Add Discovery ServiceSelectorManager for forced refreshes
- [Bug] In Discovery retry quicker after a failure

* 0.77

- Implemented QuantileDigest merging
- Added methods for serializing and deserializing QuantileDigest
- Allow adding negative values to QuantileDigest