@@ -16,7 +16,7 @@
 package io.airlift.http.server;
 
 import io.airlift.configuration.Config;
-import io.airlift.configuration.LegacyConfig;
+import io.airlift.configuration.DefunctConfig;
 import io.airlift.units.DataSize;
 import io.airlift.units.Duration;
 
@@ -24,6 +24,22 @@ import javax.validation.constraints.Min;
 
 import java.util.concurrent.TimeUnit;
 
+@DefunctConfig({
+        "jetty.http.enabled",
+        "jetty.http.port",
+        "jetty.https.enabled",
+        "jetty.https.port",
+        "jetty.https.keystore.path",
+        "jetty.https.keystore.password",
+        "jetty.log.path",
+        "jetty.log.retain-days",
+        "jetty.threads.min",
+        "jetty.threads.max",
+        "jetty.threads.max-idle-time-ms",
+        "jetty.net.max-idle-time-ms",
+        "jetty.auth.users-file",
+        "http-server.https.keystore.password",
+})
 public class HttpServerConfig
 {
     private boolean httpEnabled = true;
@@ -56,7 +72,6 @@ public class HttpServerConfig
     }
 
     @Config("http-server.http.enabled")
-    @LegacyConfig("jetty.http.enabled")
     public HttpServerConfig setHttpEnabled(boolean httpEnabled)
     {
         this.httpEnabled = httpEnabled;
@@ -69,7 +84,6 @@ public class HttpServerConfig
     }
 
     @Config("http-server.http.port")
-    @LegacyConfig("jetty.http.port")
     public HttpServerConfig setHttpPort(int httpPort)
     {
         this.httpPort = httpPort;
@@ -82,7 +96,6 @@ public class HttpServerConfig
     }
 
     @Config("http-server.https.enabled")
-    @LegacyConfig("jetty.https.enabled")
     public HttpServerConfig setHttpsEnabled(boolean httpsEnabled)
     {
         this.httpsEnabled = httpsEnabled;
@@ -95,7 +108,6 @@ public class HttpServerConfig
     }
 
     @Config("http-server.https.port")
-    @LegacyConfig("jetty.https.port")
     public HttpServerConfig setHttpsPort(int httpsPort)
     {
         this.httpsPort = httpsPort;
@@ -108,7 +120,6 @@ public class HttpServerConfig
     }
 
     @Config("http-server.https.keystore.path")
-    @LegacyConfig("jetty.https.keystore.path")
     public HttpServerConfig setKeystorePath(String keystorePath)
     {
         this.keystorePath = keystorePath;
@@ -121,7 +132,6 @@ public class HttpServerConfig
     }
 
     @Config("http-server.https.keystore.key")
-    @LegacyConfig({"jetty.https.keystore.password", "http-server.https.keystore.password"})
     public HttpServerConfig setKeystorePassword(String keystorePassword)
     {
         this.keystorePassword = keystorePassword;
@@ -134,7 +144,6 @@ public class HttpServerConfig
     }
 
     @Config("http-server.log.path")
-    @LegacyConfig("jetty.log.path")
     public HttpServerConfig setLogPath(String logPath)
     {
         this.logPath = logPath;
@@ -147,7 +156,6 @@ public class HttpServerConfig
     }
 
     @Config("http-server.threads.max")
-    @LegacyConfig("jetty.threads.max")
     public HttpServerConfig setMaxThreads(int maxThreads)
     {
         this.maxThreads = maxThreads;
@@ -160,7 +168,6 @@ public class HttpServerConfig
     }
 
     @Config("http-server.threads.min")
-    @LegacyConfig("jetty.threads.min")
     public HttpServerConfig setMinThreads(int minThreads)
     {
         this.minThreads = minThreads;
@@ -179,13 +186,6 @@ public class HttpServerConfig
         return this;
     }
 
-    @Deprecated
-    @LegacyConfig(value = "jetty.threads.max-idle-time-ms", replacedBy = "http-server.threads.max-idle-time")
-    public HttpServerConfig setThreadMaxIdleTimeInMs(int millis)
-    {
-        return setThreadMaxIdleTime(new Duration(millis, TimeUnit.MILLISECONDS));
-    }
-
     public Duration getLogRetentionTime()
     {
         return logRetentionTime;
@@ -198,20 +198,12 @@ public class HttpServerConfig
         return this;
     }
 
-    @Deprecated
-    @LegacyConfig(value = "jetty.log.retain-days", replacedBy = "http-server.log.retention-time")
-    public HttpServerConfig setLogRetentionTimeInDays(int days)
-    {
-        return setLogRetentionTime(new Duration(days, TimeUnit.DAYS));
-    }
-
     public String getUserAuthFile()
     {
         return userAuthFile;
     }
 
     @Config("http-server.auth.users-file")
-    @LegacyConfig("jetty.auth.users-file")
     public HttpServerConfig setUserAuthFile(String userAuthFile)
     {
         this.userAuthFile = userAuthFile;
@@ -228,13 +220,6 @@ public class HttpServerConfig
     {
         this.networkMaxIdleTime = networkMaxIdleTime;
         return this;
-    }
-
-    @Deprecated
-    @LegacyConfig(value = "jetty.net.max-idle-time-ms", replacedBy = "http-server.net.max-idle-time")
-    public HttpServerConfig setNetworkMaxIdleTimeInMs(int millis)
-    {
-        return setNetworkMaxIdleTime(new Duration(millis, TimeUnit.MILLISECONDS));
     }
 
     public boolean isAdminEnabled()
