@@ -97,58 +97,4 @@ public class TestHttpServerConfig
 
         ConfigAssertions.assertFullMapping(properties, expected);
     }
-
-    @Test
-    public void testDeprecatedProperties()
-    {
-        Map<String, String> currentProperties = new ImmutableMap.Builder<String, String>()
-                .put("http-server.http.enabled", "false")
-                .put("http-server.http.port", "1")
-                .put("http-server.https.enabled", "true")
-                .put("http-server.https.port", "2")
-                .put("http-server.https.keystore.path", "/keystore")
-                .put("http-server.https.keystore.key", "keystore password")
-                .put("http-server.log.path", "/log")
-                .put("http-server.log.retention-time", "1d")
-                .put("http-server.threads.min", "100")
-                .put("http-server.threads.max", "500")
-                .put("http-server.threads.max-idle-time", "10m")
-                .put("http-server.net.max-idle-time", "20m")
-                .put("http-server.auth.users-file", "/auth")
-                .build();
-
-        Map<String, String> oldProperties = new ImmutableMap.Builder<String, String>()
-                .put("http-server.http.enabled", "false")
-                .put("http-server.http.port", "1")
-                .put("http-server.https.enabled", "true")
-                .put("http-server.https.port", "2")
-                .put("http-server.https.keystore.path", "/keystore")
-                .put("http-server.https.keystore.password", "keystore password")
-                .put("http-server.log.path", "/log")
-                .put("http-server.log.retention-time", "1d")
-                .put("http-server.threads.min", "100")
-                .put("http-server.threads.max", "500")
-                .put("http-server.threads.max-idle-time", "10m")
-                .put("http-server.net.max-idle-time", "20m")
-                .put("http-server.auth.users-file", "/auth")
-                .build();
-
-        Map<String, String> olderProperties = new ImmutableMap.Builder<String, String>()
-                .put("jetty.http.enabled", "false")
-                .put("jetty.http.port", "1")
-                .put("jetty.https.enabled", "true")
-                .put("jetty.https.port", "2")
-                .put("jetty.https.keystore.path", "/keystore")
-                .put("jetty.https.keystore.password", "keystore password")
-                .put("jetty.log.path", "/log")
-                .put("jetty.log.retain-days", "1")
-                .put("jetty.threads.min", "100")
-                .put("jetty.threads.max", "500")
-                .put("jetty.threads.max-idle-time-ms", "600000")
-                .put("jetty.net.max-idle-time-ms", "1200000")
-                .put("jetty.auth.users-file", "/auth")
-                .build();
-
-        ConfigAssertions.assertDeprecatedEquivalence(HttpServerConfig.class, currentProperties, oldProperties, olderProperties);
-    }
 }
